fixed missing/broken css

--- a/src/css/oap/doc.css
+++ b/src/css/oap/doc.css
@@ -323,6 +323,10 @@
   align-items: center;
 }
 
+.doc img {
+  display: inline-block;
+}
+
 .doc .imageblock img {
   display: block;
 }
